--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             //// Greek
             // const days = ['Κυριακή', 'Δευτέρα', 'Τρίτη', 'Τετάρτη', 'Πέμπτη', 'Παρασκευή', 'Σάββατο'];
             const day = days[now.getDay()];
-            const date = now.toLocaleDateString('de-DE');
+            //const date = now.toLocaleDateString('de-DE');
 
             document.getElementById('clock').textContent = `${hours}:${minutes}`;
             document.getElementById('date').textContent = `${day}, ${date}`;
