--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         function updateTime() {
             const now = new Date();
             // const hours = String(now.getHours()).padStart(2, '0');
-            const hours = now.getHours();
+            const hours = int(now.getHours());
             const minutes = String(now.getMinutes()).padStart(2, '0');
             const seconds = String(now.getSeconds()).padStart(2, '0');
             const ampm = hours >= 12 ? 'PM' : 'AM';
