--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
         function updateTime() {
             const now = new Date();
             // const hours = String(now.getHours()).padStart(2, '0');
-            const hours = int(now.getHours());
+            const hours = Int(now.getHours());
             const minutes = String(now.getMinutes()).padStart(2, '0');
             const seconds = String(now.getSeconds()).padStart(2, '0');
-            const ampm = hours >= 12 ? 'PM' : 'AM';
+            const ampm = String(hours >= 12 ? 'PM' : 'AM');
             hours = hours % 12 || 12;
             hours = String(hours.padStart(2, '0');
             //// Croatian
