--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
     <script>
         function updateTime() {
             const now = new Date();
-            // const hours = String(now.getHours()).padStart(2, '0');
-            const hours = Int(now.getHours());
+            const hours = String(((now.getHours()) % 12 || 12).padStart(2, '0');
+            // const hours = Int(now.getHours());
             const minutes = String(now.getMinutes()).padStart(2, '0');
             const seconds = String(now.getSeconds()).padStart(2, '0');
-            const ampm = String(hours >= 12 ? 'PM' : 'AM');
-            hours = hours % 12 || 12;
-            hours = String(hours.padStart(2, '0');
+            const ampm = String((now.getHours()) >= 12 ? 'PM' : 'AM');
+            // hours = hours % 12 || 12;
+            // hours = String(hours.padStart(2, '0');
             //// Croatian
             //const days = ['Nedjelja', 'Ponedjeljak', 'Utorak', 'Srijeda', 'Četvrtak', 'Petak', 'Subota'];
             //// English
